--- a/package.json
+++ b/package.json
@@ -9,31 +9,32 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.0.0",
-    "@angular/cdk": "^16.0.0",
-    "@angular/common": "^16.0.0",
-    "@angular/compiler": "^16.0.0",
-    "@angular/core": "^16.0.0",
-    "@angular/forms": "^16.0.0",
-    "@angular/material": "^16.0.0",
-    "@angular/platform-browser": "^16.0.0",
-    "@angular/platform-browser-dynamic": "^16.0.0",
-    "@angular/router": "^16.0.0",
-    "@angular/service-worker": "^16.0.0",
+    "@angular/animations": "^16.1.4",
+    "@angular/cdk": "^16.1.4",
+    "@angular/common": "^16.1.4",
+    "@angular/compiler": "^16.1.4",
+    "@angular/core": "^16.1.4",
+    "@angular/forms": "^16.1.4",
+    "@angular/material": "^16.1.4",
+    "@angular/platform-browser": "^16.1.4",
+    "@angular/platform-browser-dynamic": "^16.1.4",
+    "@angular/router": "^16.1.4",
+    "@angular/service-worker": "^16.1.4",
     "highlight.js": "^11.8.0",
     "js-cookie": "^3.0.5",
-    "marked": "^5.0.0",
+    "marked": "^5.1.1",
     "rxjs": "^7.8.1",
     "timeago.js": "^4.0.2",
-    "tslib": "^2.5.0",
-    "zone.js": "^0.13.0"
+    "tslib": "^2.6.0",
+    "zone.js": "^0.13.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.0.0",
-    "@angular/cli": "^16.0.0",
-    "@angular/compiler-cli": "^16.0.0",
-    "@types/marked": "^4.3.0",
-    "prettier": "^2.8.8",
-    "typescript": "~5.0.4"
+    "@angular-devkit/build-angular": "^16.1.4",
+    "@angular/cli": "^16.1.4",
+    "@angular/compiler-cli": "^16.1.4",
+    "@types/marked": "^5.0.0",
+    "npm-check-updates": "^16.10.15",
+    "prettier": "^3.0.0",
+    "typescript": "~5.1.6"
   }
 }
