--- a/package.json
+++ b/package.json
@@ -9,32 +9,32 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.2.1",
-    "@angular/cdk": "^16.2.1",
-    "@angular/common": "^16.2.1",
-    "@angular/compiler": "^16.2.1",
-    "@angular/core": "^16.2.1",
-    "@angular/forms": "^16.2.1",
-    "@angular/material": "^16.2.1",
-    "@angular/platform-browser": "^16.2.1",
-    "@angular/platform-browser-dynamic": "^16.2.1",
-    "@angular/router": "^16.2.1",
-    "@angular/service-worker": "^16.2.1",
+    "@angular/animations": "^17.0.0-next.2",
+    "@angular/cdk": "^17.0.0-next.1",
+    "@angular/common": "^17.0.0-next.2",
+    "@angular/compiler": "^17.0.0-next.2",
+    "@angular/core": "^17.0.0-next.2",
+    "@angular/forms": "^17.0.0-next.2",
+    "@angular/material": "^17.0.0-next.1",
+    "@angular/platform-browser": "^17.0.0-next.2",
+    "@angular/platform-browser-dynamic": "^17.0.0-next.2",
+    "@angular/router": "^17.0.0-next.2",
+    "@angular/service-worker": "^17.0.0-next.2",
     "highlight.js": "^11.8.0",
     "js-cookie": "^3.0.5",
-    "marked": "^7.0.4",
+    "marked": "^8.0.0",
     "rxjs": "^7.8.1",
     "timeago.js": "^4.0.2",
     "tslib": "^2.6.2",
     "zone.js": "^0.13.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.2.0",
-    "@angular/cli": "^16.2.0",
-    "@angular/compiler-cli": "^16.2.1",
+    "@angular-devkit/build-angular": "^17.0.0-next.0",
+    "@angular/cli": "^17.0.0-next.0",
+    "@angular/compiler-cli": "^17.0.0-next.2",
     "@types/marked": "^5.0.1",
-    "npm-check-updates": "^16.13.1",
-    "prettier": "^3.0.2",
-    "typescript": "~5.1.6"
+    "npm-check-updates": "^16.13.2",
+    "prettier": "^3.0.3",
+    "typescript": "~5.2.2"
   }
 }
